Fix chart responsiveness and grid overflow; add message alerts; add notification dot and animation; finalize project.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 
@@ -60,6 +60,7 @@ main {
 
 h1 {
   font-weight: 300;
+  font-size: 1.75em;
 }
 
 h1.logo {
@@ -67,7 +68,7 @@ h1.logo {
 }
 
 .trademark {
-  font-size: 1rem;
+  font-size: 0.75rem;
 }
 
 h2, h3 {
@@ -100,6 +101,7 @@ header {
   justify-content: space-between;
 }
 
+
 .secondary-nav {
   display: flex;
   align-items: center;
@@ -115,20 +117,43 @@ header {
 
 .bell {
   order: -1;
+  position: relative;
 }
 
-.bell svg {
+.bell-svg {
   width: 70%;
-  max-width: 35px;
+  max-width: 30px;
   fill: var(--white);
+}
+
+#notifications {
+  background-color: #90ee90;
+  border-radius: 20px;
+  padding: 3px;
+  position: absolute;
+  top: -4px;
+  right: 4px;
 }
 
 header img {
   border-radius: 64px;
   display: inline-block;
   float: left;
-  max-width: 40px;
+  max-width: 35px;
 }
+
+/* Bell Animation */
+
+@keyframes ring {
+  0% {transform: rotate(-8deg)}
+  30% {transform: rotate(6deg)}
+  60% {transform: rotate(-4deg)}
+}
+
+.bell-svg:hover {
+  animation: ring .5s ease-out backwards;
+}
+
 
 
 /* Nav */
@@ -139,12 +164,12 @@ nav {
   justify-content: center;
   gap: 30px;
   background-color: var(--dark-purple);
-  padding: 15px;
+  padding: 10px;
 }
 
 nav svg {
   width: 100%;
-  max-width: 35px;
+  max-width: 30px;
   fill: var(--white);
 }
 
@@ -153,6 +178,7 @@ nav svg {
 main {
   background-color: var(--white);
   display: grid;
+  grid-auto-columns: minmax(0, 1fr);
 }
 
 .main-header {
@@ -171,22 +197,24 @@ main {
   order: -1;
 }
 
-.headline {
-  padding-right: 15px;
-}
 
 .tab {
   background-color: var(--light-gray);
   width: 100%;
 }
 
-section, .headline, .alert {
+.headline, .alert {
   padding: 0 15px;
+}
+
+section {
+  padding: 0 15px 15px 15px;
 }
 
 section, .tab {
   border-bottom: var(--border);
 }
+
 
 /* Alert Banner */
 
@@ -216,6 +244,7 @@ section, .tab {
 .widget-container-half {
   width: 95vw;
   position: relative;
+  aspect-ratio: 2.5;
   }
 
 /* Traffic Widget */
@@ -225,12 +254,12 @@ section, .tab {
   align-items: center;
   justify-content: flex-start;
   list-style-type: none;
-  /* gap: 7px; */
   padding: 0;
 }
 
 .traffic-nav li {
   padding: 8px 14px;
+  font-size: 1.25em;
 }
 
 .active {
@@ -339,7 +368,7 @@ select {
 }
 
 textarea {
-  min-height: 65px;
+  min-height: 70px;
 }
 
 button {
@@ -365,7 +394,7 @@ button {
 }
 
 
-/* Toggle */
+/* Toggle Flex Container*/
 
 .toggle-container {
   display: flex;
@@ -384,7 +413,7 @@ button {
 @media (min-width: 768px) { 
   
   .grid-container {
-    grid-template-columns: 55px 1fr;
+    grid-template-columns: 55px minmax(0, 1fr);
     grid-template-areas:
       "header header"
       "navigation main";
@@ -403,7 +432,7 @@ button {
   }
 
   main {
-    grid-template-columns: 50%;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .main-header,
@@ -413,7 +442,7 @@ button {
   .members,
   .activity,
   .message,
-  .settings {
+  #settings {
     grid-column: 1 / 3;
   }
 
@@ -427,7 +456,7 @@ button {
   }
 
   .widget-container-full {
-    width: 90vw;
+    width: 91vw;
     }
 
   .widget-container-half {
@@ -480,7 +509,7 @@ button {
   }
 
   .activity,
-  .settings {
+  #settings {
     grid-column: 2 / span 1 ;
   }
 
